Spacing Fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ a {
 }
 .contact {
     text-align: center;
-    margin: 30px;
+    margin: 10px;
     line-height: 20px;
 }
 
@@ -145,8 +145,8 @@ hr {
     }
     .portfolio-bio {
         text-align: left;
-        margin: auto;
-        padding: 20px;
+        margin-right: 400px;
+        /* padding: 20px; */
     }
     .profile-picture {
         float: right;
@@ -170,7 +170,7 @@ hr {
     }
     .main-nav li {
         display: inline-block;
-        width: 20%;
+        width: 17%;
         
     }
     .skills-container {
@@ -219,7 +219,14 @@ hr {
         margin-top: 15px;
     }
     .main-nav li {
-        display: inline-block;
+        float: right;
+        margin-left: 5px;
+    }
+    .bio {
+        margin: 50px;
+    }
+    .portfolio-bio {
+        word-wrap: break-word;
     }
     .marketing,
     .search,
@@ -234,5 +241,9 @@ hr {
     }
     .skills-wrapper {
         margin: 5px;
+    }
+    .contact-paragraph {
+        margin-right: 20%;
+        margin-left: 20%;
     }
 }
